--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react-app": "^7.0.1",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chart.js": "^2.8.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -44,6 +45,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.8.3",
     "react-app-polyfill": "^0.2.1",
+    "react-chartjs-2": "^2.7.6",
     "react-dev-utils": "^7.0.3",
     "react-dom": "^16.8.3",
     "react-router": "^4.3.1",
